--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <script src="{% static 'js/script.js' %}"> </script>
+    
+    <link rel="stylesheet" href="../static/css/style.css">
+    <script src="../static/js/script.js"> </script>
     <title>Check your Age</title>
     
 </head>
@@ -31,12 +31,12 @@
                 <p>
                     <input type="submit" value="Submit">
                 </p>
-            </form>
 
-            <p id="response">
+                <p id="response">
         
-            </p>
-
+                </p>
+            </form>
+            
         </div>
         
     </div>
