--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,9 @@
         
         <div class="flex flex-jc-c flex-ai-c form">
             <form name="AgeForm" class="flex flex-jc-c flex-ai-c form__age" onsubmit="someFunction(event)">
+
+                <h1>Find out your Age!</h1>
+
                 <p>
                     <label id="label">Day</label>
                     <input id="day" name="day" type="number">
